# WEB_HW9

./: config.ini  connection_code.py  data_upload.py  models.py  pyproject.toml  scrap_to_json.py
json_files/: authors.json  qoutes.json
