[tool.poetry]
name = "web_hw9"
version = "0.1.0"
description = ""
authors = ["MicMaus <michael.yasynskyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
mongoengine = "^0.27.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
